Fixed Behaviour to Work with Docker Compose
